No pic user image

--- a/templates/web/pormibarrio/report/display.html
+++ b/templates/web/pormibarrio/report/display.html
@@ -32,7 +32,7 @@
     <div class="comment comment-user">
         <div class="user-avatar">
             <!--avatar dinámico -->
-            <img alt="" src="images/user-1.png">
+            <img alt="" src="/cobrands/pormibarrio/images/no_pic.png">
         </div>
         <div class="user-info">
             [% INCLUDE 'report/update-form.html' %]
