--- a/templates/web/pormibarrio/report/update.html
+++ b/templates/web/pormibarrio/report/update.html
@@ -32,7 +32,7 @@
 <div class="comment-reports">
 [% END %]
      <div class="comment">
-		<div class="user-avatar"><img alt="" src="/i/user-imm.png"></div>
+		<div class="user-avatar"><img alt="" src="/cobrands/pormibarrio/images/no_pic.png"></div>
 		<div class="user-info">
 			<h4>[% update.name %]</h4>
 			<span class="time-report">[% INCLUDE meta_line %]</span>
