--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -1,77 +1,111 @@
 [% allow_creation = !c.cobrand.only_authed_can_create || (c.user && c.user.from_body) %]
 [% IF allow_creation %]
-<!--Status Report-->
-<!--
-<div class="status-report">
-	<h4>Estado del reporte</h4>
-	<ul>
-		<li>
-			Cuadrilla asignada para el 16/05/2014
-			<span class="time-report">hace 1 hr</span>
-		</li>
-		<li>
-			Problema ingresado al sistema
-			<span class="time-report">hace 4 días</span>
-		</li>
-	</ul>
-</div>
--->
-<!--Comments Report-->
-<!--<div class="comment-reports">-->
-	<!--
-	<div class="comment comment-user">
-		<div class="user-avatar"><img alt="" src="images/user-1.png"></div>
-		<div class="user-info">
-			<form role="form">
-				<textarea rows=""></textarea>
-			</form>
-		</div>
-	</div>
-	-->
-	<!--<div class="comment">
-		<div class="user-avatar"><img alt="" src="images/user-2.png"></div>
-		<div class="user-info">
-			<h4>Zlatan Ibrahimovic</h4>
-			<span class="time-report">hace 2 días</span>
-		</div>
-		<div class="user-comment">
-			<p>
-				"You remember when your dad taught you to swim?" The boy nodded. "Well, in the University of
-				California” - that is the name we had for the houses - we taught young men and women
-				how to think, just as I have taught you now, by sand and pebbles and shells, to
-				know how many
-			</p>
-		</div>
-	</div>
-	<div class="comment imm-comment">
-		<div class="user-avatar"><img alt="" src="images/user-imm.png"></div>
-		<div class="user-info">
-			<h4>Intendencia de Montevideo</h4>
-			<span class="time-report">hace 4 días</span>
-		</div>
-		<div class="user-comment">
-			<p>
-				La cuadrilla #12345 fue asignada para resolver este problema para el 16/05. Cualquier consulta...
-			</p>
-		</div>
-	</div>
-	<div class="comment">
-		<div class="user-avatar"><img alt="" src="images/user-3.png"></div>
-		<div class="user-info">
-			<h4>Olivia Wilde</h4>
-			<span class="time-report">hace 2 meses</span>
-		</div>
-		<div class="user-comment">
-			<p>
-				Ok, I saw this yesterday.
-			</p>
-		</div>
-		<div class="user-picture">
-			<img alt="" src="images/image-report-ref-user.jpg">
-		</div>
-	</div>
-</div>-->
 <!--Update Report-->
+[% INCLUDE 'errors.html' %]
+<form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
+	<input type="hidden" name="submit_update" value="1">
+	<input type="hidden" name="id" value="[% problem.id | html %]">
+	
+	<div class="form-group">
+		<input type="text" class="form-control [% IF field_errors.name %] error [% END %]" name="name" id="form_name" value="[% update.name || c.user.name | html %]" placeholder="[% loc('Name') %]">
+
+		<input type="email" name="form_rznvy" id="form_rznvy" value="[% update.user.email | html %]" class="form-control [% IF field_errors.email %] error [% END %]" placeholder="[% loc('Email' ) %]">
+
+	[% IF c.cobrand.allow_photo_upload %]
+		[% IF upload_fileid %]
+			<img align="right" src="/photo/[% upload_fileid %].temp.jpeg" alt="">
+			<p>[% loc('You have already attached a photo to this update, attaching another one will replace it.') %]</p>
+			<input type="hidden" name="upload_fileid" value="[% upload_fileid %]">
+		[% END %]
+			[% IF field_errors.photo %]
+				<p class='form-error'>[% field_errors.photo %]</p>
+			[% END %]
+			<input type="file" name="photo" id="form_photo">
+		</div>
+	[% END %]
+
+	<div class="boxs">
+		<div class="checkbox">
+			<input type="checkbox" name="may_show_name" id="form_may_show_name" value="1"[% ' checked' IF update.anonymous==0 OR (c.cobrand.default_show_name AND update.anonymous=='') %]>
+			<label class="inline" for="form_may_show_name">[% loc('Show my name publicly') %]</label>
+		</div>
+		<div class="checkbox">
+			<input type="checkbox" name="add_alert" id="form_add_alert" value="1"[% ' checked' IF add_alert %]>
+			<label class="inline" for="form_add_alert">[% loc( 'Alert me to future updates' ) %]</label>
+		</div>
+
+		[% IF c.user && c.user.belongs_to_body( problem.bodies_str ) %]
+			<label for="form_state">[% loc( 'State' ) %]</label>
+			<select name="state" id="form_state">
+				[% FOREACH state IN [ ['confirmed', loc('Open')], ['investigating',
+				loc('Investigating')], ['action scheduled', loc('Action Scheduled')],
+				['in progress', loc('In Progress')], ['duplicate', loc('Duplicate')],
+				['unable to fix', loc('Unable to fix')], ['not responsible', loc('Not Responsible')],
+				['fixed', loc('Fixed')] ] %]
+				<option [% 'selected ' IF state.0 == problem.state %] value="[% state.0 %]">[% state.1 %]</option>
+				[% END %]
+			</select>
+		[% ELSE %]
+			[% IF problem.is_fixed AND c.user_exists AND c.user.id == problem.user_id %]
+				<div class="checkbox">
+					<input type="checkbox" name="reopen" id="form_reopen" value="1"[% ' checked' IF update.mark_open %]>
+					<label class="inline" for="form_reopen">[% loc('This problem has not been fixed') %]</label>
+				</div>
+			[% ELSIF !problem.is_fixed %]
+				<div class="checkbox">
+					<input type="checkbox" name="fixed" id="form_fixed" value="1"[% ' checked' IF update.mark_fixed %]>
+					<label class="inline" for="form_fixed">[% loc('This problem has been fixed') %]</label>
+				</div>
+			[% END %]
+		[% END %]
+	</div>
+	<textarea rows="" name="update" id="form_update" placeholder="Escriba aquí su comentario *" class="[% IF field_errors.update %] error [% END %]" required>[% update.text | html %]</textarea>
+
+	<!--Sign In-->
+	[% IF !c.user_exists %]
+	<div class="login">
+		<div class="bloque-sesion new-report">
+			<div class="ir">
+				<h2>Accede a tu cuenta</h2>
+				<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
+			</div>
+			[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+			<div class="social-buttons">
+				[% IF c.config.FACEBOOK_APP_ID %]
+					<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
+				[% END %]
+				[% IF c.config.TWITTER_KEY %]
+					<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
+				[% END %]
+			</div>
+			<p>...ó ingresa los datos si ya tienes cuenta:</p>
+			[% END %]
+			
+			<!--login con password-->
+			<div class="form-group">				
+				<!--<input type="email" name="form_rznvy" id="form_rznvy" value="[% update.user.email | html %]" 
+						class="form-control [% IF field_errors.email %] error [% END %]" placeholder="[% loc('Your email address' ) %]"> -->
+				<input class="form-control [% IF field_errors.password %] error [% END %]" type="password" name="password_sign_in" id="password_sign_in" value="" placeholder="[% loc('Your password') %]">
+			</div>
+			<!--/login con password-->
+
+			<p class="no-account">
+				¿No utilizas redes sociales? No hay problema!
+				<br>
+				<a class="green registrate" href="/auth">Regístrate aquí con tu mail</a>
+			</p>
+		</div> <!-- bloque-sesion -->
+	</div> <!-- Sign In -->
+	[% END %]
+
+	[% IF c.user_exists %]
+		[% INCLUDE name %]
+		<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar">
+	[% ELSE %]
+		<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
+	[% END %]
+
+<!--Update Report
 [% INCLUDE 'errors.html' %]
 <form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
 				<input type="hidden" name="submit_update" value="1">
@@ -178,7 +212,7 @@
 							<p class="dark">[% loc('Forgotten your password?') %]</p>
 							<p>[% loc('Confirm by email below, providing a new password at that point. When you confirm, your password will be updated.') %]</p>
 						</div>
-						-->
+						
 					</div>
 					<div id="form_sign_in_no" class="form-box no-account">
 						<h5>[% loc('<strong>Or</strong> Let me confirm my update by email') %]</h5>
@@ -222,3 +256,4 @@
 [% END %]
 
 [% END %]
+-->
