--- a/templates/web/pormibarrio/report/update.html
+++ b/templates/web/pormibarrio/report/update.html
@@ -1,46 +1,14 @@
-<!--
-[% IF loop.first %]
-<section class="full-width">
-    <h4 class="static-with-rule">[% loc('Updates') %]</h4>
-    <ul class="issue-list">
-[% END %]
-        <li>
-            <div class="update-wrap">
-            [% IF update.whenanswered %]
-                <div class="update-text">
-                    <p class="meta-2"> [% INCLUDE meta_line %] </p>
-                </div>
-            [% ELSE %]
-                <div class="update-text">
-                    [% add_links( update.text ) | html_para %]
-
-                    <p class="meta-2">
-                        <a name="update_[% update.id %]"></a>
-                        [% INCLUDE meta_line %]
-                    </p>
-                </div>
-                [% INCLUDE 'report/photo.html' object=update %]
-            [% END %]
-            </div>
-        </li>
-[% IF loop.last %]
-    </ul>
-</section>
-[% END %]
--->
 [% IF loop.first %]
 <div class="comment-reports">
 [% END %]
-     <div class="comment">
+     <div class="comment comment-[% update.name %]">
 		<div class="user-avatar"><img alt="" src="/cobrands/pormibarrio/images/no_pic.png"></div>
 		<div class="user-info">
 			<h4>[% update.name %]</h4>
 			<span class="time-report">[% INCLUDE meta_line %]</span>
 		</div>
 		<div class="user-comment">
-			<p>
-				[% add_links( update.text ) | html_para %]
-			</p>
+			[% add_links( update.text ) | html_para %]
 			[% INCLUDE 'report/photo.html' object=update %]
 		</div>
 	</div>
