--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -73,20 +73,6 @@
                     <input type="text" value="[% report.address_comp | html %]" name="address_comp" id="form_address_comp" placeholder="[% loc('Number or corner') %]" required>
                     -->
                     <div class="form-group">
-                        <label for="form_title">[% loc('Subject') %] *</label>
-                        [% IF field_errors.title %]
-                            <p class='form-error'>[% field_errors.title %]</p>
-                        [% END %]
-                        <input type="text" value="[% report.title | html %]" name="title" id="form_title" placeholder="[% loc('Provide a title') %]" required>
-
-                        <label for="form_detail">[% loc('Details') %] *</label>
-                        [% IF field_errors.detail %]
-                            <p class='form-error'>[% field_errors.detail %]</p>
-                        [% END %]
-                        <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="[% loc('Please fill in details of the problem.') %]" required>[% report.detail | html %]</textarea>
-                    </div>
-
-                    <div class="form-group">
                         [% IF js %]
                             <div id="form_category_row">
                                 <label for="form_category">[% loc('Category') %] *</label>
@@ -109,6 +95,20 @@
                         [%- IF category_extras %]
                             [% PROCESS "report/new/category_extras.html" %]
                         [%- END %]
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="form_title">[% loc('Subject') %] *</label>
+                        [% IF field_errors.title %]
+                            <p class='form-error'>[% field_errors.title %]</p>
+                        [% END %]
+                        <input type="text" value="[% report.title | html %]" name="title" id="form_title" placeholder="[% loc('Provide a title') %]" required>
+
+                        <label for="form_detail">[% loc('Details') %] *</label>
+                        [% IF field_errors.detail %]
+                            <p class='form-error'>[% field_errors.detail %]</p>
+                        [% END %]
+                        <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="[% loc('Please fill in details of the problem.') %]" required>[% report.detail | html %]</textarea>
                     </div>
 
                     <div class="form-group">
@@ -206,13 +206,13 @@
 						<div id="form_sign_in">
 							<div class="ir">
 								<p>[% loc("Now to submit your report&hellip;") %]</p>
-								<p>[% loc("Do you have a social network account?") %]</p>
+								<p>Conecta por redes sociales</p>
 							</div>
 
 							[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
 							<div id="form_sign_social" class="form-box no-account">			
 								<div class="ir">
-									<h2>[% loc('<strong>Yes</strong> I have a social network account') %]</h2>
+									<h2>[% loc('<strong>SI</strong> Uso redes sociales') %]</h2>
 								</div>
 								<div>
 									[% IF c.config.FACEBOOK_APP_ID %]
@@ -231,7 +231,7 @@
 
 							<div id="form_sign_in_yes" class="form-box no-account">
 								<div class="ir">
-									<h2>[% loc('<strong>No</strong> I have a FixMyStreet password') %]</h2>
+									<h2>[% loc('<strong>No</strong> Tengo la contraseña de PMB') %]</h2>
 								</div>
 
 								<label class="hidden-js n" for="password_sign_in">[% loc('Yes I have a password') %]</label>
@@ -240,7 +240,6 @@
 										<p class='form-error'>[% field_errors.password %]</p>
 									[% END %]
 									<input type="password" name="password_sign_in" id="password_sign_in" placeholder="[% loc('Your password') %]" value="">
-									<input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
 								</div>
 
 								<div class="checkbox-group">
@@ -257,7 +256,7 @@
 
 							<div id="form_sign_in_no" class="form-box no-account">
 								<div class="ir">
-									<h2>[% loc('<strong>Or</strong> Let me confirm my report by email') %]</h2>
+									<h2>[% loc('<strong>O</strong> Confirmaré mi reporte por email') %]</h2>
 								</div>
 
 								[% INCLUDE 'report/new/extra_name.html' %]
@@ -275,11 +274,12 @@
 									<label class="inline" for="form_may_show_name">[% loc('Show my name publicly') %]</label>
 								</div>
 								<div class="form-group">
-									<label for="form_identity_document">[% loc('Identity document') %] *</label>
+									<label for="form_identity_document">[% loc('Número de documento') %] *</label>
 									[% IF field_errors.identity_document %]
 										<p class='form-error'>[% field_errors.identity_document %]</p>
 									[% END %]
 									<input type="text" class="form-focus-trigger" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" placeholder="[% loc('For example: 1.234.567-8') %]">
+									<input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
 								</div>
 								<!--<div class="general-sidebar-notes form-focus-hidden">
 									<p class="dark">[% loc('We never show your email address or phone number.') %]</p>
