--- a/templates/web/default/maps/pins_js.html
+++ b/templates/web/default/maps/pins_js.html
@@ -1,4 +1,4 @@
 [ [% FOR pin IN map.pins -%]
-    [ [% pin.latitude %], [% pin.longitude %], '[% pin.colour %]', '[% pin.id %]', "[% pin.title | escape_js %]", '[% pin.type %]' ]
+    [ [% pin.latitude %], [% pin.longitude %], '[% pin.colour %]', '[% pin.id %]', "[% pin.title | escape_js %]", '[% pin.type %]', '[% pin.user %]', '[% pin.category %]', '[% pin.catId %]', '[% pin.date %]', '[% pin.hasPhoto %]', '[% pin.hasComments %]']
     [%- IF !loop.last %],[% END %]
 [% END %] ]
