--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -13,11 +13,13 @@
     [% INCLUDE "around/around_map_list_items.html" %]
 </ul>-->
 <!--LISTADO DE REPORTES-->
-<div class="reportes sub report-list">
+<div id="report-list" class="reportes sub report-list">
 	<!--Intro reports-->
-    <div class="ir">
-        <h2>Reportes</h2>
-        <p>Aquí encontrará problemas en su zona o en la zona que desee reportar o chequear. Para hacer el reporte sólo debe hacer click en el mapa.</p>
+    <div id="top-reports" class="ir">
+        <div class="c-t">
+            <h2>Reportes</h2>
+            <p>Aquí encontrará problemas en su zona o en la zona que desee reportar o chequear. Para hacer el reporte sólo debe hacer click en el mapa.</p>
+        </div>
     </div>
     <!--/end intro reports-->
     <div class="rl scrolled">
