--- a/templates/web/pormibarrio/index.html
+++ b/templates/web/pormibarrio/index.html
@@ -83,7 +83,7 @@ setTimeout(
 <body class="intro">
     <div class="overlay-blue"></div>
         <!--MAIN CONTAINER-->
-        <div class="container c-intro">
+        <div class="c-intro">
             <h1><img src="/cobrands/pormibarrio/images/logo-intro.png" alt="Por mi Barrio"></h1>
             <h2 class="responsive" data-compression="10" data-min="14" data-max="40">Mejorando la ciudad, contigo.</h2>
             <p>Esta es una plataforma para hacer reclamos por roturas y problemas que veas en la ciudad junto a 
