--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -38,12 +38,102 @@ a, button, div.it-r {
 
 .container{
 	height: 100%;
+	background:url(images/bg/bg-intro.jpg) no-repeat center top;
 }
 
-body.mappage div.problem-container {
-	width: 100%;
-	background:url(images/bg/bg-content-report.png) repeat-x left bottom;
+/*PAGE INTRO--------------------------------------*/
+
+html {
+  position: relative;
+  min-height: 100%;
 }
+
+body.intro {
+  background:url(images/bg/bg-intro.jpg) no-repeat center top;
+  background-size:cover;
+}
+
+/*div.overlay-blue{
+	height:100%;
+	width:100%;
+	position:absolute;
+	left:0;
+	top:0;
+	background:url(../images/bg/bg-blue-overlay.png);
+	z-index:1	
+}*/
+
+div.c-intro{
+	z-index:2;
+	position:relative;
+	width:100%;
+	max-width:940px;
+	margin:0 auto;
+	text-align:center;
+	color:#fff;
+	padding-top:6rem;
+	/*padding-left:15px;
+	padding-right:15px*/
+}
+
+div.c-intro h2{
+	font-weight:300;
+	font-size:3.375em;
+	margin: 4rem 0 0 0; 	
+}
+
+div.c-intro p{
+	font-size:1.125em;
+	max-width:740px;
+	margin:0 auto;
+	line-height:1.44444em;
+	margin-top: 1.5rem;}
+
+div.steps{
+	margin-top: 6rem;
+}
+
+div.step{
+	width:33.3333%;
+	float:left;
+	min-width:276px;
+	text-align:center	
+}
+
+div.step h3{
+	font-size:1.125em;
+	font-weight:400;
+	line-height:1.44444em;
+	margin-top: 13px;}
+
+div.c-buttons-intro{
+	margin-top: 7rem;}
+
+.footer-intro {
+  width: 100%;
+  text-align:center;
+  z-index:2;
+  font-size:0.875em;
+  color:#fff;
+  margin-top:60px;
+  padding-bottom:20px
+}
+
+a.know-more{
+	display:block;
+	margin:23px 0 4px 0;
+	color:#fff	
+}
+
+a.know-more:hover{
+	text-decoration:none;
+	opacity:0.9;
+}
+
+p.photo-credit{
+	opacity:0.2;
+}
+
 
 /*FIRST NAVIGATION------------------------------------*/
 nav.first-navigation{
@@ -53,7 +143,16 @@ nav.first-navigation{
 	left:0;
 	height:100%;
 	z-index:10000;
-	padding:0 8px
+	padding:0 8px;
+	width:81px;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+nav.first-navigation:hover{
+	width:183px;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275); 
 }
 
 nav.first-navigation li{
@@ -65,11 +164,6 @@ nav.first-navigation:hover li a{
 	padding:15px 25px 0 61px;
 	text-indent:inherit;
 	width:auto;
-}
-
-
-nav.first-navigation:hover li.home a span{
-	display:block	
 }
 
 nav.first-navigation li a{
@@ -91,6 +185,20 @@ nav.first-navigation li a:hover{
 	text-decoration:none;	
 }
 
+nav.first-navigation li a span{
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	transition: all .3s ease;
+	opacity:0;
+}
+
+nav.first-navigation:hover li a span{
+	-webkit-transition: all .9s ease;
+	-moz-transition: all .9s ease;
+	transition: all .9s ease;
+	opacity:1
+}
+
 nav.first-navigation li.home a{
 	width:100%;
 	background:url(images/por-mi-barrio-sm.png) no-repeat top center;
@@ -108,8 +216,16 @@ nav.first-navigation li.home a span{
 	height:31px;
 	background:url(images/bg/bg-span-pmb.png) no-repeat center top;
 	margin:65px auto 0;
-	display:none
+	-webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	transition:         all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	opacity:0;
+	display:block
+}
 
+nav.first-navigation:hover li.home a span{
+	-webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	transition:         all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	opacity:1;
 }
 
 li.reportar{
@@ -134,6 +250,22 @@ li.help a{
 	background:url(images/icon-help.png) no-repeat 20px center;
 }
 
+nav.first-navigation li.profile a{
+	display:block;
+	width:35px;
+	height:35px;
+	text-indent:inherit;
+	padding-left:15px	
+}
+
+nav.first-navigation:hover li.profile a{
+	padding-left:15px	
+}
+
+nav.first-navigation li.profile a img{
+	float:left;
+	margin-right:9px;
+}
 
 /*Help info*/
 ul.help-info{
@@ -146,6 +278,7 @@ ul.help-info{
 
 ul.help-info li a{
 	text-indent:-99999em!important;
+	padding-left:35px;
 }
 
 li.doc-info a{
@@ -219,15 +352,33 @@ div.sub{
 	height:100%;
 	top:0;
 	left:81px;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	opacity:1;
+}
+
+div.open-side{
+	left:183px;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+	opacity:1!important;
+	z-index:1000;
+}
+
+div.side-active{
+	left:183px;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+	opacity:1!important
 }
 
 div.reportes{
-	background:#fff;
-	z-index:1000
+	background: rgba(255,255,255,0.9);
+	height:100%;
+	overflow:hidden;
 }
 
 div.ir{
-	padding:55px 40px 25px 40px;
 	border-bottom:#ebebeb solid 1px;
 }
 
@@ -370,15 +521,19 @@ div.map{
 
 /*CONTENT REPORT-------------------------------------------------------------------*/
 div.c-report{
+	background:url(../images/bg/bg-content-report.png) repeat-x left bottom;
 	position:absolute;
 	width:100%;
 	height:100%;
 	z-index:10;
 	display:block
+	-webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	transition:         all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	padding-bottom:50px;
 }
 
 div.container-report{
-	margin-left:346px;
+	margin-left:135px;
 	height:100%;
 	position:relative;
 }
@@ -386,13 +541,42 @@ div.container-report{
 div.report{
 	border-radius: 5px;
     height: 100%;
-    /*left: 50%;*/
-    margin-left: -410px;
-    overflow: hidden;
-    padding-bottom: 50px;
+    left: 290px;
+    margin-left: -290px;
     position: absolute;
     top: 10%;
     width: 580px;
+    opacity:1;
+	overflow:hidden;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+div.report-medium{
+	left:392px;	
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+div.image-report{
+	position:relative	
+}
+
+a.btn-close-report{
+	position:absolute;
+	right:30px;
+	top:20px;
+	font-weight:600;
+	text-transform:uppercase;
+	color:#fff;
+	font-size:0.875em;
+	background:rgba(0,0,0,0.3);
+	padding:2px 10px	
+}
+
+a.btn-close-report:hover{
+	background:rgba(0,0,0,0.5);
+	text-decoration:none
 }
 
 div.report .img-top{
@@ -422,15 +606,45 @@ div.intro-report h3{
 div.intro-report address{
 	font-size:14px;
 	background:url(images/pin-address.png) no-repeat left top;
-	padding:2px 0 2px 26px	
+	padding:2px 0 2px 26px;
+	font-style:normal;	
 }
 
 div.intro-report p{
 	font-size:1.125em;
 	line-height:1.5em;
 	margin:0;
-	padding:15px 0;
-	border-bottom:#ebebeb solid 1px;	
+	padding:15px 0;	
+}
+
+div.sign{
+	margin-top:10px;
+}
+
+div.sign div.picture{
+	float:left;
+	padding-right:15px;
+	background-color:#fff
+}
+
+div.sign div.author{
+	border-top:#ebebeb solid 1px;
+	margin-top:2px;
+	padding-top:4px;
+}
+
+div.author span a{
+	color:#252525	
+}
+
+div.author span a:hover{
+	text-decoration:none;
+	color:#3e3e3e;	
+}
+
+div.author span{
+	color:#7d7d7d;
+	font-size:15px;
 }
 
 span.sign, span.time-report{
@@ -1153,10 +1367,266 @@ span.name{
 	width:5px;
 	height:10px;
 	float:right;
-	background: url(../images/bg/white-arrow.png) no-repeat left top;
+	background: url(images/bg/white-arrow.png) no-repeat left top;
 	margin:5px 0 0 8px;
 }
 
 .tool h3{
 	color:#a40301	
+}
+
+a.navbar-brand, li.reportar-small {
+	display:none;	
+}
+
+.navbar-collapse{
+	padding-left:0;
+	padding-right:0;	
+}
+
+
+
+
+/*MEDIAQUERIES------------------------------------------------------------*/
+
+/*@media (max-width: 1200px) {
+	div.container-report{
+		margin-left:0		
+	}
+
+	div.report{
+		width:469px;
+		border-radius:0;
+		top:32.5%;
+		margin-left:0;
+		left:81px;
+		-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	}
+	
+	div.report-medium{
+		left:183px;	
+		-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	}
+	
+	div.report-medium-expand{
+		left:603px;	
+		-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		
+	}
+	
+	div.report-medium-con{
+		left:501px;	
+		-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+		
+	}
+
+}*/
+
+
+@media (max-width: 967px) {
+	
+	/*INTRO*/
+	div.c-intro{
+		padding-left:20px;
+		padding-right:20px;
+	}
+	
+	div.c-intro p{
+		width:auto		
+	}
+	
+	div.step{
+		float:none;
+		margin:0 auto 4rem;		
+	}
+	
+	div.c-buttons-intro{
+		margin-top:3rem;		
+	}
+	
+}
+
+@media (max-width: 860px) {
+	.navbar-toggle{
+		display:block;
+		float:left;
+		background-color:#1e2e3d;
+		border-radius:0;
+		margin:20px 0 0 9px;
+		position:absolute
+	}
+	
+	.navbar-toggle .icon-bar{
+		background-color:#fff;
+		border-radius:0;
+		width:40px;
+		height:6px;
+		margin-bottom:7px;
+	}
+	
+	ul.help-info{
+		position:relative;
+		left:auto;
+		bottom:auto;
+		width:auto				
+	}
+	
+	ul.help-info li a{
+		text-indent:inherit!important		
+	}
+	
+	nav.first-navigation:hover ul.help-info li a{
+		padding-left:55px;!important
+	}
+	
+	li.doc-info a, li.data a, li.my-society a{
+		background-position:20px center;		
+	}
+	
+	.navbar-brand{
+		padding:0;
+		width:32.5%; /* 208 / 640 */
+		margin:2rem auto 0;
+		float:none;
+		display:block!important;
+		height:70px;	
+	}
+	
+	nav.first-navigation li.profile a{
+		width:100%;
+		height:100%;
+		overflow:auto		
+	}	
+	
+	nav.first-navigation li.profile a span{
+		opacity:1;
+		float:left;
+		margin-top:4px;		
+	}
+	
+	.navbar-collapse{
+		background-color:#131e29;
+		margin:0!important;
+		padding:0 0 0 0!important;
+		border-bottom:#495f73 solid 5px;
+		max-height:none;
+	}
+	
+	nav.first-navigation, nav.first-navigation:hover{
+		width:100%;
+		height:90px;
+		padding-top:12px;
+		padding:0
+	}
+	
+	nav.first-navigation:hover{
+		width:100%		
+	}
+	
+	nav.first-navigation li a, ul.help-info li a{
+		border-radius:0;
+		display:block;
+		width:100%
+	}
+	
+	nav.first-navigation li a:hover, ul.help-info li a:hover{
+		background-color:#2a3e51
+
+	}
+	
+	nav.first-navigation li.home a{
+		display:none;
+	}
+	
+	li.reportar{
+		display:none		
+	}
+	
+	li.reportar-small{
+		position: absolute;
+		right: 23px;
+		top: 19px;
+		margin-top:0;
+		text-indent:-9999em;
+		display:block;
+	}
+	
+	nav.first-navigation li.reportar-small a, nav.first-navigation:hover li.reportar-small a{
+		width:65px;
+		padding:15px 0 0 0!important;
+		border-radius:5px;
+		height:55px!important
+	}
+	
+	nav.first-navigation li a, nav.first-navigation:hover li a{
+		text-indent:inherit;
+		padding:15px 25px 15px 61px;
+		height:auto!important	
+	}
+	
+	/*LISTADO DE REPORTES*/
+	div.sub{
+		opacity:1;
+		width:100%;
+		margin-top:80px;
+		left:0;		
+	}
+	
+	div.side-active{
+		left:0		
+	}
+	
+	/*DETALLE DE REPORTE*/
+	div.container-report{
+		margin-left:0px;		
+	}
+	
+	div.report{
+		width:100%;
+		left:0;
+		border-radius:0;
+		top:0;
+		margin-top:90px;
+		margin-left:0
+	}
+	
+	.container{
+		padding-left:0;
+		padding-right:0		
+	}
+	
+}
+
+@media (max-width: 540px) {
+	/*INTRO*/
+	.btn-intro{
+		float:none;
+		margin:15px auto;
+		clear:both;
+		display:block;
+		width:60%		
+	}
+	
+	.footer{
+		position:relative;
+		height:auto;
+		margin-top:40px		
+	}
+	
+	body.intro{
+		margin-bottom:25px		
+	}
+	
+	
+}
+
+@media (max-width: 480px) {
+	/*INTRO*/
+	.btn-intro{
+		width:100%		
+	}	
 }
