--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -240,7 +240,7 @@
 										<p class='form-error'>[% field_errors.password %]</p>
 									[% END %]
 									<input type="password" name="password_sign_in" id="password_sign_in" placeholder="[% loc('Your password') %]" value="">
-								</div>
+								</div><input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
 
 								<div class="checkbox-group">
 									<input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
@@ -279,7 +279,7 @@
 										<p class='form-error'>[% field_errors.identity_document %]</p>
 									[% END %]
 									<input type="text" class="form-focus-trigger" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" placeholder="[% loc('For example: 1.234.567-8') %]">
-									<input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
+									<!--<input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">-->
 								</div>
 								<!--<div class="general-sidebar-notes form-focus-hidden">
 									<p class="dark">[% loc('We never show your email address or phone number.') %]</p>
